Move text align to base css to prevent css flash, update deploy script

--- a/components/Features/Features.scss
+++ b/components/Features/Features.scss
@@ -1,7 +1,6 @@
 @import '../variables.scss';
 
 .Features {
-  text-align: center;
   padding-top: 80px;
   padding-bottom: 150px;
   overflow: hidden;
