--- a/components/Header/Header.scss
+++ b/components/Header/Header.scss
@@ -1,7 +1,6 @@
 @import '../variables.scss';
 
 .Main-header {
-  text-align: center;
   overflow: hidden;
 
   &--banana {
