--- a/components/Layout/Layout.scss
+++ b/components/Layout/Layout.scss
@@ -28,6 +28,7 @@ p {
 }
 
 .page-section {
+  text-align: center;
   padding: 52px 20px;
   position: relative;
 }
