--- a/components/Testimonials/Testimonials.scss
+++ b/components/Testimonials/Testimonials.scss
@@ -2,7 +2,6 @@
 
 .Testimonials {
   background-color: #fff;
-  text-align: center;
   overflow: hidden;
   padding-top: 37px;
 
